name:            boolexpr
cabal-Version:   >=1.10
version:         0.3
license:         BSD3
license-File:    LICENSE
copyright:       (c) Nicolas Pouillard
author:          Nicolas Pouillard
maintainer:      Nicolas Pouillard <nicolas.pouillard@gmail.com>
category:        Search, Data Structures, Parsing
synopsis:        Boolean expressions with various representations and search queries.
description:     Boolean expressions with various representations and search queries.
stability:       Provisional
build-type:      Simple
extra-source-files: CHANGELOG.md

library
  build-depends:   base>=3.0&&<5, parsec, extra, containers
  exposed-modules: Data.BoolExpr,
                   Data.BoolExpr.Parser,
                   Data.BoolExpr.Printer,
                   Data.BoolExpr.Simplify
  ghc-options:     -Wall
  default-language: Haskell98

test-suite unit-tests
    import:           stan-config, common, ghc2021-extensions
    main-is:          Main.hs
    type:             exitcode-stdio-1.0
    build-depends:    tasty                         >= 0.10 && < 1.5,
                      tasty-hunit                   >= 0.10 && < 0.11,
                      -- Imports shared with the library don't need bounds
                      base,
                      containers,
                      parsec,
                      boolexpr
    hs-source-dirs:   test/unit
    default-language: Haskell2010
    ghc-options:      -threaded

source-repository head
  type:     git
  location: https://github.com/boolexpr/boolexpr.git
